// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/kustomize/extract extractPackageFile() extracts http dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "user/repo",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts multiple image lines 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depNameShort": "moredhel/remote-kustomize",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "git-tags",
    "depName": "moredhel/remote-kustomize",
    "depNameShort": "moredhel/remote-kustomize",
    "lookupName": "https://moredhel/remote-kustomize.git",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts sha256 instead of tag 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": "sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c",
      "datasource": "docker",
      "depName": "postgres",
      "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: hasura

commonLabels:
  app.kubernetes.io/name: hasura

bases:
  - ../base/

patchesStrategicMerge:
  - patches/deployment.yaml

images:
  - name: postgres
    newTag: sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c
  - name: alpine
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
  - name: alpine
    newTag: 3.12.2
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
",
      "versioning": "docker",
    },
    Object {
      "currentDigest": "sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7",
      "currentValue": undefined,
      "datasource": "docker",
      "depName": "alpine",
      "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: hasura

commonLabels:
  app.kubernetes.io/name: hasura

bases:
  - ../base/

patchesStrategicMerge:
  - patches/deployment.yaml

images:
  - name: postgres
    newTag: sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c
  - name: alpine
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
  - name: alpine
    newTag: 3.12.2
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
",
      "versioning": "docker",
    },
    Object {
      "currentDigest": "sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7",
      "currentValue": "3.12.2",
      "datasource": "docker",
      "depName": "alpine",
      "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: hasura

commonLabels:
  app.kubernetes.io/name: hasura

bases:
  - ../base/

patchesStrategicMerge:
  - patches/deployment.yaml

images:
  - name: postgres
    newTag: sha256:b0cfe264cb1143c7c660ddfd5c482464997d62d6bc9f97f8fdf3deefce881a8c
  - name: alpine
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
  - name: alpine
    newTag: 3.12.2
    digest: sha256:074d3636ebda6dd446d0d00304c4454f468237fdacf08fb0eeac90bdbfa1bac7
",
      "versioning": "docker",
    },
  ],
}
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() extracts ssh dependency with a subdir 1`] = `
Array [
  Object {
    "currentValue": "v2.0.0",
    "datasource": "github-tags",
    "depName": "kubernetes-sigs/kustomize",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract bases from bases block and the resources block 1`] = `
Array [
  Object {
    "currentValue": "v0.0.1",
    "datasource": "github-tags",
    "depName": "moredhel/remote-kustomize",
  },
  Object {
    "currentValue": "1.19.0",
    "datasource": "github-tags",
    "depName": "fluxcd/flux",
  },
]
`;

exports[`manager/kustomize/extract extractPackageFile() should extract out image versions 1`] = `
Array [
  Object {
    "currentValue": "v0.1.0",
    "datasource": "docker",
    "depName": "node",
    "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: testing-namespace

resources:
- deployment.yaml

images:
- name: node
  newTag: v0.1.0
- newTag: v0.0.1
  name: group/instance
- name: quay.io/test/repo
  newTag: v0.0.2
- name: gitlab.com/org/suborg/image
  newTag: v0.0.3
- name: this-lives/on-docker-hub
  newName: but.this.lives.on.local/private-registry # and therefore we need to check the versions available here
  newTag: v0.0.4
",
    "versioning": "docker",
  },
  Object {
    "currentValue": "v0.0.1",
    "datasource": "docker",
    "depName": "group/instance",
    "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: testing-namespace

resources:
- deployment.yaml

images:
- name: node
  newTag: v0.1.0
- newTag: v0.0.1
  name: group/instance
- name: quay.io/test/repo
  newTag: v0.0.2
- name: gitlab.com/org/suborg/image
  newTag: v0.0.3
- name: this-lives/on-docker-hub
  newName: but.this.lives.on.local/private-registry # and therefore we need to check the versions available here
  newTag: v0.0.4
",
    "versioning": "docker",
  },
  Object {
    "currentValue": "v0.0.2",
    "datasource": "docker",
    "depName": "quay.io/test/repo",
    "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: testing-namespace

resources:
- deployment.yaml

images:
- name: node
  newTag: v0.1.0
- newTag: v0.0.1
  name: group/instance
- name: quay.io/test/repo
  newTag: v0.0.2
- name: gitlab.com/org/suborg/image
  newTag: v0.0.3
- name: this-lives/on-docker-hub
  newName: but.this.lives.on.local/private-registry # and therefore we need to check the versions available here
  newTag: v0.0.4
",
    "versioning": "docker",
  },
  Object {
    "currentValue": "v0.0.3",
    "datasource": "docker",
    "depName": "gitlab.com/org/suborg/image",
    "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: testing-namespace

resources:
- deployment.yaml

images:
- name: node
  newTag: v0.1.0
- newTag: v0.0.1
  name: group/instance
- name: quay.io/test/repo
  newTag: v0.0.2
- name: gitlab.com/org/suborg/image
  newTag: v0.0.3
- name: this-lives/on-docker-hub
  newName: but.this.lives.on.local/private-registry # and therefore we need to check the versions available here
  newTag: v0.0.4
",
    "versioning": "docker",
  },
  Object {
    "currentValue": "v0.0.4",
    "datasource": "docker",
    "depName": "but.this.lives.on.local/private-registry",
    "replaceString": "apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: testing-namespace

resources:
- deployment.yaml

images:
- name: node
  newTag: v0.1.0
- newTag: v0.0.1
  name: group/instance
- name: quay.io/test/repo
  newTag: v0.0.2
- name: gitlab.com/org/suborg/image
  newTag: v0.0.3
- name: this-lives/on-docker-hub
  newName: but.this.lives.on.local/private-registry # and therefore we need to check the versions available here
  newTag: v0.0.4
",
    "versioning": "docker",
  },
]
`;
